Editado estilos do cabeçalho

--- a/style.css
+++ b/style.css
@@ -17,5 +17,25 @@
 }
 
 body {
+    box-sizing: border-box;
     background-color: var(--cor-fundo);
+    color: var(--cor-texto);
+}
+
+.cabecalho {
+    padding: 2% 0% 0% 15%;
+}
+
+.cabecalho__menu {
+    display: flex;
+    gap: 60px;
+}
+
+.cabecalho__menu__link {
+    font-family: var(--fonte-primaria);
+    font-size: 1.5rem;
+    font-weight: 600;
+
+    text-decoration: none;
+
 }
