--- a/style.css
+++ b/style.css
@@ -24,13 +24,14 @@ body {
 }
 
 .cabecalho {
-    padding: 2% 15% 0% 15%;
+    padding: 2% 15% 5% 15%;
+    background-color: var(--cor-destaque);
+    background: linear-gradient(180deg, rgba(159,135,114,1) 0%, rgba(77,70,70,1) 95%);
 }
 
 .cabecalho__menu {
     display: flex;
     justify-content: space-between;
-    /* gap: 50px; */
 }
 
 .cabecalho__menu__link {
@@ -38,17 +39,19 @@ body {
     font-size: 1.5rem;
     font-weight: 600;
     text-decoration: none;
+    color: var(--cor-texto)
 }
 
 .cabecalho__menu__link:hover {
     color: var(--cor-acao);
+    font-size: 1.75rem
 }
 
 .apresentacao {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 5% 10%;
+    padding: 0% 10%;
     gap: 100px;
 }
 
@@ -104,7 +107,7 @@ body {
     justify-content: space-between;
     align-items: center;
     gap: 32px;
-    margin-top: 5%;
+    margin: 5% 0% 5% 0%;
 }
 
 .apresentacao__links__subtitulo {
@@ -120,7 +123,6 @@ body {
     text-decoration: none;
     background-color: var(--cor-acao);
     color: var(--cor-fundo);
-    /* border: 2px solid var(--cor-bordas); */
     border-radius: 8px;
     padding: 21.5px 0;
     width: 25%;
@@ -131,4 +133,16 @@ body {
     background-color: var(--cor-hover);
     font-size: 1.75rem;
     border: 2px solid var(--cor-bordas);
+}
+
+.rodape {
+    background-color: var(--cor-destaque);
+    background: linear-gradient(0deg, rgba(159,135,114,1) 0%, rgba(77,70,70,1) 85%);
+    padding: 5% 0% 1% 0%;
+    text-align: center;
+    font-family: var(--fonte-primaria);
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--cor-texto);
+
 }
