--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,7 @@ body {
     font-size: 2.25rem;
     font-family: var(--fonte-primaria);
     font-weight: 600;
-    text-align: center  ;
+    text-align: center;
 }
 
 .apresentacao__principal__texto {
@@ -109,7 +109,6 @@ body {
     align-items: center;
     gap: 32px;
     margin: 5% 0% 5% 0%;
-    order: 3;
 }
 
 .apresentacao__links__subtitulo {
@@ -154,7 +153,7 @@ body {
 @media (max-width: 1200px) {
 
     .cabecalho {
-        padding: 5% 0% 20% 0%;
+        padding: 5% 5% 20% 5%;
     }
 
     .cabecalho__menu {
@@ -167,17 +166,19 @@ body {
         flex-direction: column;
     }  
 
-    .apresentacao__historia {
+    .apresentacao__principal {
+        width: 100%;
         order: 2;
-        width: auto;
     }
+    
     .apresentacao__imagem {
-            width: 75%;
-            order: 1;
+        width: 100%;
+        order: 1;
     }
 
-    .apresentacao__missao {
-        order: 3;
+    .apresentacao__secundario {
+        width: 100%;
+        order: 2;
     }
 
     .apresentacao__links__navegacao {
