--- a/styles/extra.css
+++ b/styles/extra.css
@@ -28,3 +28,19 @@ td, th {
 .image {
     width: 50%;
 }
+
+@media (max-width: 1200px) {
+
+    .principal__titulo {
+        font-size: 1.5rem;
+    }
+
+    td {
+        font-size: 1.25rem;
+    }
+
+    .image {
+        width: 60px;
+    }
+
+}
